# cpp_parallel_template

./: CMakeLists.txt  README.md
src/parallel_executor/: main.cpp
src/parallel_executor/Device/: Device.h  DeviceA.cpp  DeviceA.h  DeviceB.cpp  DeviceB.h
src/parallel_executor/Event/: DataEvent.cpp  DataEvent.h  DeviceEvent.cpp  DeviceEvent.h  Event.h  StartedEvent.cpp  StartedEvent.h  WorkDoneEvent.cpp  WorkDoneEvent.h
src/parallel_executor/EventQueue/: EventQueue.cpp  EventQueue.h
src/parallel_executor/Parser/: Parser.cpp  Parser.h
test/: CMakeLists.txt  Test_Devices.cpp  Test_EventQueue.cpp  Test_Events.cpp  Test_Parser.cpp
